# asrcode

./: -assembly.txt  analysis.py  assembly.py  assemblystt.py  azurestt.py  data_dict.pickle  deepgram.py  deepgramstt.py  openai.py  openaistt.py  pyproject.toml  run.py  utils.py  workbench.ipynb
dev-other/116/288045/: 116-288045-0000-assembly.txt  116-288045-assembly.txt  116-288045-azure.txt  116-288045-deepgram.txt  116-288045-openai.txt
dev-other/116/288046/: 116-288046-assembly.txt  116-288046-azure.txt  116-288046-deepgram.txt  116-288046-openai.txt
dev-other/116/288047/: 116-288047-assembly.txt  116-288047-azure.txt  116-288047-deepgram.txt  116-288047-openai.txt
dev-other/116/288048/: 116-288048-assembly.txt  116-288048-azure.txt  116-288048-deepgram.txt  116-288048-openai.txt
dev-other/1255/138279/: 1255-138279-assembly.txt  1255-138279-azure.txt  1255-138279-deepgram.txt  1255-138279-openai.txt
dev-other/1255/74899/: 1255-74899-assembly.txt  1255-74899-azure.txt  1255-74899-deepgram.txt  1255-74899-openai.txt
dev-other/1255/90407/: 1255-90407-assembly.txt  1255-90407-azure.txt  1255-90407-deepgram.txt  1255-90407-openai.txt
dev-other/1255/90413/: 1255-90413-assembly.txt  1255-90413-azure.txt  1255-90413-deepgram.txt  1255-90413-openai.txt
dev-other/1585/131718/: 1585-131718-assembly.txt  1585-131718-azure.txt  1585-131718-deepgram.txt  1585-131718-openai.txt
dev-other/1585/157660/: 1585-157660-assembly.txt  1585-157660-azure.txt  1585-157660-deepgram.txt  1585-157660-openai.txt
dev-other/1630/102884/: 1630-102884-assembly.txt  (+3 more)
(+92 files in other folders)
